# mkdocs_with_pdf-exclude_pages-bug

./: mkdocs.yml  pyproject.toml
docs/: back.md  index.md
docs/a_folder/: file_in_folder_1.md  file_in_folder_2.md
